@@ -695,7 +695,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**   An<code>IndexWriter</code> creates and maintains an index.<p>The {@link OpenMode} option on    {@link IndexWriterConfig#setOpenMode(OpenMode)} determines    whether a new index is created, or whether an existing index is   opened. Note that you can open an index with {@link OpenMode#CREATE}   even while readers are using the index. The old readers will    continue to search the "point in time" snapshot they had opened,    and won't see the newly created index until they re-open. If    {@link OpenMode#CREATE_OR_APPEND} is used IndexWriter will create a    new index if there is not already an index at the provided path   and otherwise open the existing index.</p><p>In either case, documents are added with {@link #addDocument(IndexDocument)   addDocument} and removed with {@link #deleteDocuments(Term...)} or {@link   #deleteDocuments(Query...)}. A document can be updated with {@link   #updateDocument(Term, IndexDocument) updateDocument} (which just deletes   and then adds the entire document). When finished adding, deleting    and updating documents, {@link #close() close} should be called.</p><a name="flush"></a><p>These changes are buffered in memory and periodically   flushed to the {@link Directory} (during the above method   calls). A flush is triggered when there are enough added documents   since the last flush. Flushing is triggered either by RAM usage of the   documents (see {@link IndexWriterConfig#setRAMBufferSizeMB}) or the   number of added documents (see {@link IndexWriterConfig#setMaxBufferedDocs(int)}).   The default is to flush when RAM usage hits   {@link IndexWriterConfig#DEFAULT_RAM_BUFFER_SIZE_MB} MB. For   best indexing speed you should flush by RAM usage with a   large RAM buffer. Additionally, if IndexWriter reaches the configured number of   buffered deletes (see {@link IndexWriterConfig#setMaxBufferedDeleteTerms})   the deleted terms and queries are flushed and applied to existing segments.   In contrast to the other flush options {@link IndexWriterConfig#setRAMBufferSizeMB} and    {@link IndexWriterConfig#setMaxBufferedDocs(int)}, deleted terms   won't trigger a segment flush. Note that flushing just moves the   internal buffered state in IndexWriter into the index, but   these changes are not visible to IndexReader until either   {@link #commit()} or {@link #close} is called.  A flush may   also trigger one or more segment merges which by default   run with a background thread so as not to block the   addDocument calls (see<a href="#mergePolicy">below</a>   for changing the {@link MergeScheduler}).</p><p>Opening an<code>IndexWriter</code> creates a lock file for the directory in use. Trying to open   another<code>IndexWriter</code> on the same directory will lead to a   {@link LockObtainFailedException}.</p><a name="deletionPolicy"></a><p>Expert:<code>IndexWriter</code> allows an optional   {@link IndexDeletionPolicy} implementation to be   specified.  You can use this to control when prior commits   are deleted from the index.  The default policy is {@link   KeepOnlyLastCommitDeletionPolicy} which removes all prior   commits as soon as a new commit is done (this matches   behavior before 2.2).  Creating your own policy can allow   you to explicitly keep previous "point in time" commits   alive in the index for some time, to allow readers to   refresh to the new commit without having the old commit   deleted out from under them.  This is necessary on   filesystems like NFS that do not support "delete on last   close" semantics, which Lucene's "point in time" search   normally relies on.</p><a name="mergePolicy"></a><p>Expert:<code>IndexWriter</code> allows you to separately change   the {@link MergePolicy} and the {@link MergeScheduler}.   The {@link MergePolicy} is invoked whenever there are   changes to the segments in the index.  Its role is to   select which merges to do, if any, and return a {@link   MergePolicy.MergeSpecification} describing the merges.   The default is {@link LogByteSizeMergePolicy}.  Then, the {@link   MergeScheduler} is invoked with the requested merges and   it decides when and how to run the merges.  The default is   {@link ConcurrentMergeScheduler}.</p><a name="OOME"></a><p><b>NOTE</b>: if you hit an   OutOfMemoryError, or disaster strikes during a checkpoint   then IndexWriter will close itself.  This is a   defensive measure in case any internal state (buffered   documents, deletions, reference counts) were corrupted.     Any subsequent calls will throw an AlreadyClosedException.</p><a name="thread-safety"></a><p><b>NOTE</b>: {@link   IndexWriter} instances are completely thread   safe, meaning multiple threads can call any of its   methods, concurrently.  If your application requires   external synchronization, you should<b>not</b>   synchronize on the<code>IndexWriter</code> instance as   this may cause deadlock; use your own (non-Lucene) objects   instead.</p><p><b>NOTE</b>: If you call<code>Thread.interrupt()</code> on a thread that's within   IndexWriter, IndexWriter will try to catch this (eg, if   it's in a wait() or Thread.sleep()), and will then throw   the unchecked exception {@link ThreadInterruptedException}   and<b>clear</b> the interrupt status on the thread.</p> */
+comment|/**   An<code>IndexWriter</code> creates and maintains an index.<p>The {@link OpenMode} option on    {@link IndexWriterConfig#setOpenMode(OpenMode)} determines    whether a new index is created, or whether an existing index is   opened. Note that you can open an index with {@link OpenMode#CREATE}   even while readers are using the index. The old readers will    continue to search the "point in time" snapshot they had opened,    and won't see the newly created index until they re-open. If    {@link OpenMode#CREATE_OR_APPEND} is used IndexWriter will create a    new index if there is not already an index at the provided path   and otherwise open the existing index.</p><p>In either case, documents are added with {@link #addDocument(IndexDocument)   addDocument} and removed with {@link #deleteDocuments(Term...)} or {@link   #deleteDocuments(Query...)}. A document can be updated with {@link   #updateDocument(Term, IndexDocument) updateDocument} (which just deletes   and then adds the entire document). When finished adding, deleting    and updating documents, {@link #close() close} should be called.</p><a name="flush"></a><p>These changes are buffered in memory and periodically   flushed to the {@link Directory} (during the above method   calls). A flush is triggered when there are enough added documents   since the last flush. Flushing is triggered either by RAM usage of the   documents (see {@link IndexWriterConfig#setRAMBufferSizeMB}) or the   number of added documents (see {@link IndexWriterConfig#setMaxBufferedDocs(int)}).   The default is to flush when RAM usage hits   {@link IndexWriterConfig#DEFAULT_RAM_BUFFER_SIZE_MB} MB. For   best indexing speed you should flush by RAM usage with a   large RAM buffer. Additionally, if IndexWriter reaches the configured number of   buffered deletes (see {@link IndexWriterConfig#setMaxBufferedDeleteTerms})   the deleted terms and queries are flushed and applied to existing segments.   In contrast to the other flush options {@link IndexWriterConfig#setRAMBufferSizeMB} and    {@link IndexWriterConfig#setMaxBufferedDocs(int)}, deleted terms   won't trigger a segment flush. Note that flushing just moves the   internal buffered state in IndexWriter into the index, but   these changes are not visible to IndexReader until either   {@link #commit()} or {@link #close} is called.  A flush may   also trigger one or more segment merges which by default   run with a background thread so as not to block the   addDocument calls (see<a href="#mergePolicy">below</a>   for changing the {@link MergeScheduler}).</p><p>Opening an<code>IndexWriter</code> creates a lock file for the directory in use. Trying to open   another<code>IndexWriter</code> on the same directory will lead to a   {@link LockObtainFailedException}.</p><a name="deletionPolicy"></a><p>Expert:<code>IndexWriter</code> allows an optional   {@link IndexDeletionPolicy} implementation to be   specified.  You can use this to control when prior commits   are deleted from the index.  The default policy is {@link   KeepOnlyLastCommitDeletionPolicy} which removes all prior   commits as soon as a new commit is done (this matches   behavior before 2.2).  Creating your own policy can allow   you to explicitly keep previous "point in time" commits   alive in the index for some time, to allow readers to   refresh to the new commit without having the old commit   deleted out from under them.  This is necessary on   filesystems like NFS that do not support "delete on last   close" semantics, which Lucene's "point in time" search   normally relies on.</p><a name="mergePolicy"></a><p>Expert:<code>IndexWriter</code> allows you to separately change   the {@link MergePolicy} and the {@link MergeScheduler}.   The {@link MergePolicy} is invoked whenever there are   changes to the segments in the index.  Its role is to   select which merges to do, if any, and return a {@link   MergePolicy.MergeSpecification} describing the merges.   The default is {@link LogByteSizeMergePolicy}.  Then, the {@link   MergeScheduler} is invoked with the requested merges and   it decides when and how to run the merges.  The default is   {@link ConcurrentMergeScheduler}.</p><a name="OOME"></a><p><b>NOTE</b>: if you hit a   VirtualMachineError, or disaster strikes during a checkpoint   then IndexWriter will close itself.  This is a   defensive measure in case any internal state (buffered   documents, deletions, reference counts) were corrupted.     Any subsequent calls will throw an AlreadyClosedException.</p><a name="thread-safety"></a><p><b>NOTE</b>: {@link   IndexWriter} instances are completely thread   safe, meaning multiple threads can call any of its   methods, concurrently.  If your application requires   external synchronization, you should<b>not</b>   synchronize on the<code>IndexWriter</code> instance as   this may cause deadlock; use your own (non-Lucene) objects   instead.</p><p><b>NOTE</b>: If you call<code>Thread.interrupt()</code> on a thread that's within   IndexWriter, IndexWriter will try to catch this (eg, if   it's in a wait() or Thread.sleep()), and will then throw   the unchecked exception {@link ThreadInterruptedException}   and<b>clear</b> the interrupt status on the thread.</p> */
 end_comment
 
 begin_comment
@@ -1493,7 +1493,7 @@ catch|catch
 parameter_list|(
 name|AbortingException
 decl||
-name|OutOfMemoryError
+name|VirtualMachineError
 name|tragedy
 parameter_list|)
 block|{
@@ -4273,7 +4273,7 @@ catch|catch
 parameter_list|(
 name|AbortingException
 decl||
-name|OutOfMemoryError
+name|VirtualMachineError
 name|tragedy
 parameter_list|)
 block|{
@@ -4607,13 +4607,13 @@ block|}
 block|}
 catch|catch
 parameter_list|(
-name|OutOfMemoryError
-name|oom
+name|VirtualMachineError
+name|tragedy
 parameter_list|)
 block|{
 name|tragicEvent
 argument_list|(
-name|oom
+name|tragedy
 argument_list|,
 literal|"deleteDocuments(Term..)"
 argument_list|)
@@ -4686,13 +4686,13 @@ block|}
 block|}
 catch|catch
 parameter_list|(
-name|OutOfMemoryError
-name|oom
+name|VirtualMachineError
+name|tragedy
 parameter_list|)
 block|{
 name|tragicEvent
 argument_list|(
-name|oom
+name|tragedy
 argument_list|,
 literal|"deleteDocuments(Query..)"
 argument_list|)
@@ -4788,7 +4788,7 @@ catch|catch
 parameter_list|(
 name|AbortingException
 decl||
-name|OutOfMemoryError
+name|VirtualMachineError
 name|tragedy
 parameter_list|)
 block|{
@@ -4876,13 +4876,13 @@ block|}
 block|}
 catch|catch
 parameter_list|(
-name|OutOfMemoryError
-name|oom
+name|VirtualMachineError
+name|tragedy
 parameter_list|)
 block|{
 name|tragicEvent
 argument_list|(
-name|oom
+name|tragedy
 argument_list|,
 literal|"updateNumericDocValue"
 argument_list|)
@@ -4981,13 +4981,13 @@ block|}
 block|}
 catch|catch
 parameter_list|(
-name|OutOfMemoryError
-name|oom
+name|VirtualMachineError
+name|tragedy
 parameter_list|)
 block|{
 name|tragicEvent
 argument_list|(
-name|oom
+name|tragedy
 argument_list|,
 literal|"updateBinaryDocValue"
 argument_list|)
@@ -5240,13 +5240,13 @@ block|}
 block|}
 catch|catch
 parameter_list|(
-name|OutOfMemoryError
-name|oom
+name|VirtualMachineError
+name|tragedy
 parameter_list|)
 block|{
 name|tragicEvent
 argument_list|(
-name|oom
+name|tragedy
 argument_list|,
 literal|"updateDocValues"
 argument_list|)
@@ -6839,13 +6839,13 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|OutOfMemoryError
-name|oom
+name|VirtualMachineError
+name|tragedy
 parameter_list|)
 block|{
 name|tragicEvent
 argument_list|(
-name|oom
+name|tragedy
 argument_list|,
 literal|"rollbackInternal"
 argument_list|)
@@ -7119,13 +7119,13 @@ block|}
 block|}
 catch|catch
 parameter_list|(
-name|OutOfMemoryError
-name|oom
+name|VirtualMachineError
+name|tragedy
 parameter_list|)
 block|{
 name|tragicEvent
 argument_list|(
-name|oom
+name|tragedy
 argument_list|,
 literal|"deleteAll"
 argument_list|)
@@ -8350,13 +8350,13 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|OutOfMemoryError
-name|oom
+name|VirtualMachineError
+name|tragedy
 parameter_list|)
 block|{
 name|tragicEvent
 argument_list|(
-name|oom
+name|tragedy
 argument_list|,
 literal|"addIndexes(Directory...)"
 argument_list|)
@@ -8829,13 +8829,13 @@ block|}
 block|}
 catch|catch
 parameter_list|(
-name|OutOfMemoryError
-name|oom
+name|VirtualMachineError
+name|tragedy
 parameter_list|)
 block|{
 name|tragicEvent
 argument_list|(
-name|oom
+name|tragedy
 argument_list|,
 literal|"addIndexes(CodecReader...)"
 argument_list|)
@@ -9429,7 +9429,7 @@ catch|catch
 parameter_list|(
 name|AbortingException
 decl||
-name|OutOfMemoryError
+name|VirtualMachineError
 name|tragedy
 parameter_list|)
 block|{
@@ -10346,7 +10346,7 @@ catch|catch
 parameter_list|(
 name|AbortingException
 decl||
-name|OutOfMemoryError
+name|VirtualMachineError
 name|tragedy
 parameter_list|)
 block|{
@@ -16862,13 +16862,13 @@ block|}
 block|}
 catch|catch
 parameter_list|(
-name|OutOfMemoryError
-name|oom
+name|VirtualMachineError
+name|tragedy
 parameter_list|)
 block|{
 name|tragicEvent
 argument_list|(
-name|oom
+name|tragedy
 argument_list|,
 literal|"startCommit"
 argument_list|)
