@@ -360,22 +360,6 @@ name|util
 operator|.
 name|LuceneTestCase
 operator|.
-name|Nightly
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|LuceneTestCase
-operator|.
 name|SuppressCodecs
 import|;
 end_import
@@ -409,7 +393,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**   * Causes a bunch of fake OOM and checks that no other exceptions are delivered instead,  * no index corruption is ever created.  */
+comment|/**   * Causes a bunch of fake VM errors and checks that no other exceptions are delivered instead,  * no index corruption is ever created.  */
 end_comment
 
 begin_class
@@ -418,10 +402,10 @@ name|SuppressCodecs
 argument_list|(
 literal|"SimpleText"
 argument_list|)
-DECL|class|TestIndexWriterOutOfMemory
+DECL|class|TestIndexWriterOnVMError
 specifier|public
 class|class
-name|TestIndexWriterOutOfMemory
+name|TestIndexWriterOnVMError
 extends|extends
 name|LuceneTestCase
 block|{
@@ -1124,13 +1108,13 @@ block|}
 block|}
 catch|catch
 parameter_list|(
-name|OutOfMemoryError
+name|VirtualMachineError
 decl||
 name|AlreadyClosedException
 name|disaster
 parameter_list|)
 block|{
-name|getOOM
+name|getTragedy
 argument_list|(
 name|disaster
 argument_list|,
@@ -1318,13 +1302,13 @@ block|}
 block|}
 catch|catch
 parameter_list|(
-name|OutOfMemoryError
+name|VirtualMachineError
 decl||
 name|AlreadyClosedException
 name|disaster
 parameter_list|)
 block|{
-name|getOOM
+name|getTragedy
 argument_list|(
 name|disaster
 argument_list|,
@@ -1433,13 +1417,13 @@ block|}
 block|}
 catch|catch
 parameter_list|(
-name|OutOfMemoryError
+name|VirtualMachineError
 decl||
 name|AlreadyClosedException
 name|disaster
 parameter_list|)
 block|{
-name|getOOM
+name|getTragedy
 argument_list|(
 name|disaster
 argument_list|,
@@ -1464,13 +1448,13 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|OutOfMemoryError
+name|VirtualMachineError
 decl||
 name|AlreadyClosedException
 name|disaster
 parameter_list|)
 block|{
-name|getOOM
+name|getTragedy
 argument_list|(
 name|disaster
 argument_list|,
@@ -1569,10 +1553,10 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-DECL|method|getOOM
+DECL|method|getTragedy
 specifier|private
-name|OutOfMemoryError
-name|getOOM
+name|VirtualMachineError
+name|getTragedy
 parameter_list|(
 name|Throwable
 name|disaster
@@ -1608,7 +1592,7 @@ if|if
 condition|(
 name|e
 operator|instanceof
-name|OutOfMemoryError
+name|VirtualMachineError
 operator|&&
 name|e
 operator|.
@@ -1624,7 +1608,7 @@ argument_list|()
 operator|.
 name|startsWith
 argument_list|(
-literal|"Fake OutOfMemoryError"
+literal|"Fake"
 argument_list|)
 condition|)
 block|{
@@ -1665,7 +1649,7 @@ parameter_list|)
 block|{}
 return|return
 operator|(
-name|OutOfMemoryError
+name|VirtualMachineError
 operator|)
 name|e
 return|;
@@ -1685,10 +1669,10 @@ return|;
 comment|// dead
 block|}
 block|}
-DECL|method|testBasics
+DECL|method|testOOM
 specifier|public
 name|void
-name|testBasics
+name|testOOM
 parameter_list|()
 throws|throws
 name|Exception
@@ -1808,6 +1792,138 @@ operator|new
 name|OutOfMemoryError
 argument_list|(
 literal|"Fake OutOfMemoryError"
+argument_list|)
+throw|;
+block|}
+block|}
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testUnknownError
+specifier|public
+name|void
+name|testUnknownError
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|Random
+name|r
+init|=
+operator|new
+name|Random
+argument_list|(
+name|random
+argument_list|()
+operator|.
+name|nextLong
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|doTest
+argument_list|(
+operator|new
+name|Failure
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|eval
+parameter_list|(
+name|MockDirectoryWrapper
+name|dir
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|r
+operator|.
+name|nextInt
+argument_list|(
+literal|3000
+argument_list|)
+operator|==
+literal|0
+condition|)
+block|{
+name|StackTraceElement
+name|stack
+index|[]
+init|=
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|getStackTrace
+argument_list|()
+decl_stmt|;
+name|boolean
+name|ok
+init|=
+literal|false
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|stack
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+name|stack
+index|[
+name|i
+index|]
+operator|.
+name|getClassName
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|IndexWriter
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|ok
+operator|=
+literal|true
+expr_stmt|;
+block|}
+block|}
+if|if
+condition|(
+name|ok
+condition|)
+block|{
+throw|throw
+operator|new
+name|UnknownError
+argument_list|(
+literal|"Fake UnknownError"
 argument_list|)
 throw|;
 block|}
